fix: add scroll for overflow in dialogue window

--- a/packages/frontend/src/features/ai-chat/ai-chat.component.scss
+++ b/packages/frontend/src/features/ai-chat/ai-chat.component.scss
@@ -4,7 +4,7 @@
   justify-content: center;
 
   width: 100%;
-  height: 100%;
+  height: calc(100vh - var(--header-height) - var(--footer-height));
 }
 
 .chat-wrapper {
