--- a/packages/frontend/src/features/ai-chat/components/dialogue-window/dialogue-window.component.scss
+++ b/packages/frontend/src/features/ai-chat/components/dialogue-window/dialogue-window.component.scss
@@ -1,10 +1,10 @@
 :host {
+  overflow-y: auto;
   display: block;
   flex: 1;
 
   width: 100%;
-  padding-right: var(--spacing-x5);
-  padding-left: var(--spacing-x5);
+  padding: var(--spacing-x5);
   border: 1px solid var(--secondary-color);
   border-radius: var(--radius-md);
 }
